--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,13 @@ ParToy Game/Library/Bee/1900b0aEDbg.dag.json
 ParToy Game/Library/Search/transactions.db
 ParToy Game/Library/SourceAssetDB
 ParToy Game/Logs/shadercompiler-UnityShaderCompiler.exe-0.log
+/ParToy Game/Library/Bee
+ParToy Game/Library/ArtifactDB
+ParToy Game/Library/ilpp.pid
+ParToy Game/Library/PackageManager/ProjectCache
+ParToy Game/Library/PackageManager/ProjectCache.md5
+ParToy Game/Library/SceneVisibilityState.asset
+ParToy Game/Library/ShaderCache/EditorEncounteredVariants
+ParToy Game/Library/SourceAssetDB
+ParToy Game/Logs/shadercompiler-UnityShaderCompiler.exe-0.log
+ParToy Game/UserSettings/Layouts/default-2023.dwlt
