--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,16 @@ ParToy Game/Library/ShaderCache/EditorEncounteredVariants
 ParToy Game/Library/SourceAssetDB
 ParToy Game/Logs/shadercompiler-UnityShaderCompiler.exe-0.log
 ParToy Game/UserSettings/Layouts/default-2023.dwlt
+ParToy Game/Library/ArtifactDB
+ParToy Game/Library/SceneVisibilityState.asset
+ParToy Game/Library/Search/transactions.db
+ParToy Game/Library/ShaderCache/EditorEncounteredVariants
+ParToy Game/Library/SourceAssetDB
+ParToy Game/Logs/shadercompiler-UnityShaderCompiler.exe-0.log
+ParToy Game/UserSettings/Layouts/default-2023.dwlt
+ParToy Game/Library/ArtifactDB
+ParToy Game/Library/LastSceneManagerSetup.txt
+ParToy Game/Library/SceneVisibilityState.asset
+ParToy Game/Library/Search/transactions.db
+ParToy Game/Library/ShaderCache/EditorEncounteredVariants
+ParToy Game/UserSettings/Layouts/default-2023.dwlt
