--- a/ParToy Game/UserSettings/Search.settings
+++ b/ParToy Game/UserSettings/Search.settings
@@ -11,6 +11,11 @@ scopes = {
 	"last_search.5A656512" = "ref=\"/Player (Missing Prefab with guid: 5fb5ea0d85c2b534db481e5fc06095bc)\""
 	"OpenInspectorPreview.5A656512" = "0"
 	"currentGroup.5A656512" = null
+	"picker_window_position_offset.075BCD15" = "95;409;320;550"
+	"picker_visibility_flags.075BCD15" = "264"
+	"picker_item_size.075BCD15" = "96"
+	"picker_inspector.075BCD15" = "0"
+	"picker_current_group.075BCD15" = "all"
 }
 providers = {
 	store = {
